fix: add more info about connecting to Kibana

--- a/src/docs/5.33.x/performance-and-load-benchmark/headless-cms/performance-tuning.mdx
+++ b/src/docs/5.33.x/performance-and-load-benchmark/headless-cms/performance-tuning.mdx
@@ -393,7 +393,7 @@ Note that, in case the refresh interval needs to be changed on an existing index
 
 ##### **Updating Existing Indexes**
 
-Existing indexes can be updated by issuing a remote REST API call to your Elasticsearch cluster:
+Existing indexes can be updated by issuing the following `PUT` HTTP request to your Elasticsearch cluster's remote REST API:
 
 ```
 PUT https://domain-name.region.es.amazonaws.com/source-index/_settings
@@ -404,7 +404,13 @@ PUT https://domain-name.region.es.amazonaws.com/source-index/_settings
 }
 ```
 
-Note that in almost all cases executing the above will result in authentication error.
+But note that, in almost all cases, executing the above will result in an authentication error, which is to be expected. 
+
+There are multiple ways you can access the mentioned REST API. 
+
+One easy and straightforward way is to levearge the [`aws-es-kibana`](https://www.npmjs.com/package/aws-es-kibana) NPM module. Essentially, the module enables us to connect to [Kibana](https://www.elastic.co/kibana/), a visual interface tool that allows us to access our data, different settings, and, most importantly, developer tools. Via these tools, we're then able to issue the above shown HTTP request as an authenticated user. 
+
+For more information, please consult the [related documentation](https://www.elastic.co/guide/en/kibana/current/console-kibana.html).
 
 
 #### Additional References
