docs: improved the Page Builder description

--- a/src/docs/5.28.x/user-guides/overview.mdx
+++ b/src/docs/5.28.x/user-guides/overview.mdx
@@ -8,7 +8,7 @@ import webinyOverview from "./assets/webiny-overview.mp4";
 
 Webiny Serverless CMS includes:
 
-1️⃣ **Page Builder** - Drag&drop page editor. Pages are prerendered automatically and cached on CloudFront for lightning-fast delivery.
+1️⃣ **Page Builder** - Build Stunning Landing Pages With an Easy to Use Drag&Drop Editor.
 
 2️⃣ **Headless CMS** - Headless CMS with a GraphQL API. Build APIs and content models through a UI. It includes content revisions, localization, and fine-grain permission control.
 
