docs: added the create content model tutorial

--- a/src/docs/5.28.x/user-guides/headless-cms/advance/sample-advance-page.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/advance/sample-advance-page.mdx
@@ -1,4 +1,4 @@
 ---
 title: Sample Advance Page
-description: Sample Headless CMS Advance Page
+description: Sample Headless CMS Advance page to demonstrate the user guide structure.
 ---
