--- a/src/docs/5.28.x/user-guides/page-builder/introduction.mdx
+++ b/src/docs/5.28.x/user-guides/page-builder/introduction.mdx
@@ -1,8 +1,4 @@
 ---
 title: Introduction
-description: In this article, you'll learn about the Page Builder.
+description: Sample Page Builder page to demonstrate the user guide structure.
 ---
-
-## Overview
-
-Page Builder
