--- a/src/docs/shared/release-notes/5.33.4/changelog.mdx
+++ b/src/docs/shared/release-notes/5.33.4/changelog.mdx
@@ -12,7 +12,7 @@ import lambdaFunctions from "./assets/lambdaFunctions.png";
 
 In case you missed it, in our previous [5.33.2](/docs/release-notes/5.33.2/changelog#updated-deploy-webiny-project-cloud-formation-template-2773) release, we've revisited our `DeployWebinyProject` [AWS CloudFormation template](/docs/{version}/infrastructure/aws/configure-aws-credentials#attaching-a-fine-grained-policy) and updated the set of permissions it deploys through multiple Amazon IAM policies. 
 
-But, we didn't stop there! With this release, we've taken it even further and ensured that the template and the list of permissions it declares fully follows the [Principle of least privilege](https://en.wikipedia.org/wiki/Principle_of_least_privilege), making it more secure and easier for organizations to adopt it. 
+But, we didn't stop there! With this release, we've taken it even further and ensured that the template and the list of permissions it includes fully follows the [Principle of least privilege](https://en.wikipedia.org/wiki/Principle_of_least_privilege), making it more secure and easier for organizations to adopt it. 
 
 To quickly check out the changes, you can visit our [GitHub repository](https://github.com/webiny/webiny-js/blob/stable/docs/DEPLOY_WEBINY_PROJECT_CF_TEMPLATE.yaml).
 
@@ -24,7 +24,7 @@ To quickly check out the changes, you can visit our [GitHub repository](https://
 
 ### Introduced Prefixed Cloud Infrastructure (Pulumi) Resource Names ([#2858](https://github.com/webiny/webiny-js/pull/2858))
 
-In order to make it easier to distinguish Webiny-related deployed cloud infrastructure resources from the rest you might have in your AWS account, apart from the [default tags](/docs/{version}/core-development-concepts/basics/project-deployment#tagged-resources), we're now also prefixing every resource name with the `wby-` prefix. For example, if we were to take a look at the list of deployed AWS Lambda functions, we'd be able to see the following:
+In order to make it easier to distinguish between Webiny-related deployed cloud infrastructure resources and other resources you already might have in your AWS account, apart from the [default tags](/docs/{version}/core-development-concepts/basics/project-deployment#tagged-resources), we're now also prefixing every resource name with the `wby-` prefix. For example, if we were to take a look at the list of deployed AWS Lambda functions, we'd be able to see the following:
 
 <Image title="Introduced Prefixed Cloud Infrastructure (Pulumi) Resource Names" src={lambdaFunctions}/>
 
@@ -36,7 +36,7 @@ Still, if you'd like to adopt the same naming convention within an existing Webi
   For existing projects that are already serving production workloads, we do not recommend performing the below steps. Changing cloud infrastructure resource name can cause a complete replacement of the resource, which might result in downtime or even a permanent data loss.
 </Alert>
 
-For example, in your `apps/core/webiny.application.ts`, we'd need to perform the following addition:
+For example, in the `apps/core/webiny.application.ts` file, we'd need to perform the following addition:
 
 ```diff-ts
 import { createCoreApp } from "@webiny/serverless-cms-aws";
@@ -52,4 +52,4 @@ The exact same addition then needs to be made in the remaining three `webiny.app
 2. `apps/admin/webiny.application.ts`
 3. `apps/website/webiny.application.ts`
 
-The final step is to redeploy your Webiny project, as usual, via the [`webiny deploy`](/docs/core-development-concepts/basics/project-deployment) command.  
+Once performed, the final step is to redeploy your Webiny project, as usual, via the [`webiny deploy`](/docs/core-development-concepts/basics/project-deployment) command.  
