docs: improved the product content model and entries images

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/create-content-model.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/create-content-model.mdx
@@ -61,7 +61,7 @@ we will define model [fields](../essentials/glossary#field-field-type).
 
 8. Congratulations! You have created your first content model.
 
-## Additional Details
+## Additional Information
 
 ### Field Validation
 You can add various validations to a field from the **VALIDATORS** tab on the **Field Settings** screen.
