--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/glossary.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/glossary.mdx
@@ -30,7 +30,7 @@ As per the example above, the Product content model will have three fields: name
 and price, with field types of text, long text, and number, respectively.  
 Below is the actual screenshot of the Webiny user interface for a content model.
 
-![Product Content Model (Webiny User Interface)](./assets/glossary/product-content-model.svg)
+![Product Content Model (Webiny User Interface)](./assets/glossary/product-content-model.png)
 
 ## Field / Field Type
 As mentioned in the content model section, every content model is a collection of fields, and each field has a type.
@@ -61,4 +61,4 @@ created with the following information is a content entry.
 
 This one record is a content entry, and each content model will contain multiple content entries.
 
-![Content Entry](./assets/glossary/product-content-entries.svg)
+![Content Entry](./assets/glossary/product-content-entries.png)
