fix: add missing `fileElasticsearchIndexPlugin` registration

--- a/src/docs/5.33.x/performance-and-load-benchmark/headless-cms/performance-tuning.mdx
+++ b/src/docs/5.33.x/performance-and-load-benchmark/headless-cms/performance-tuning.mdx
@@ -278,6 +278,7 @@ export const handler = createHandler({
         fileManagerPlugins(),
         fileManagerDynamoDbElasticStorageOperation(),
         fileManagerS3(),
++       fileElasticsearchIndexPlugin,      
         prerenderingServicePlugins({
             eventBus: String(process.env.EVENT_BUS)
         }),
