wip: create release notes

--- a/src/docs/shared/release-notes/5.34.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.0/changelog.mdx
@@ -4,6 +4,12 @@ title: Webiny 5.34.0 Changelog
 description: See what's new in Webiny version 5.34.0.
 ---
 
+## Page Builder
+
+### New Page Rendering Engine ([#2898](https://github.com/webiny/webiny-js/pull/2898))
+
+✏️
+
 ## Mailer
 
 ### Default and Configurable Mailer Transports ([#2698](https://github.com/webiny/webiny-js/pull/2698))
@@ -17,7 +23,19 @@ To learn more about our `@webiny/api-mailer` package, please read this [article]
 
 To make the configuration of the Mailer transports easier, we added the Mailer Settings in the Admin UI.
 
-## System Wide
+## Development
+
+### App Aliases ([#2895](https://github.com/webiny/webiny-js/pull/2895))
+
+✏️
+
+### Feature Flags ([#2897](https://github.com/webiny/webiny-js/pull/2897))
+
+✏️
+
+### Environment Variables via `webiny.project.ts` ([#2896](https://github.com/webiny/webiny-js/pull/2896))
+
+✏️
 
 ### Lifecycle Events ([#2615](https://github.com/webiny/webiny-js/pull/2615))
 
