feat: add nested object filtering into changelog

--- a/src/docs/shared/release-notes/5.34.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.0/changelog.mdx
@@ -23,6 +23,16 @@ To learn more about our `@webiny/api-mailer` package, please read this [article]
 
 To make the configuration of the Mailer transports easier, we added the Mailer Settings in the Admin UI.
 
+## Headless CMS
+
+### Nested Object Field Filtering ([#2853](https://github.com/webiny/webiny-js/pull/2853)) ([#2905](https://github.com/webiny/webiny-js/pull/2905))
+
+We added a possibility to filter entries by the values in the nested object field.
+It does not matter if it is a multiple values object or just a single one, or how deep the data is nested.
+
+Our only recommendation is not to filter really deeply nested objects in the DynamoDB only systems, as it will get slow.
+
+
 ## Development
 
 ### App Aliases ([#2895](https://github.com/webiny/webiny-js/pull/2895))
