fix: highlight the method name

--- a/src/docs/5.31.x/core-development-concepts/extending-and-customizing/add-custom-route-to-existing-lambda.mdx
+++ b/src/docs/5.31.x/core-development-concepts/extending-and-customizing/add-custom-route-to-existing-lambda.mdx
@@ -81,7 +81,7 @@ export const handler = createHandler({
 });
 ```
 
-In the createApiGatewayRoute method callback, there are multiple properties available:
+In the `createApiGatewayRoute` method callback, there are multiple properties available:
 
 * `onPost` - register a POST method route
 * `onOptions` - register an OPTIONS method route
