--- a/src/docs/5.31.x/core-development-concepts/extending-and-customizing/add-custom-route-to-existing-lambda.mdx
+++ b/src/docs/5.31.x/core-development-concepts/extending-and-customizing/add-custom-route-to-existing-lambda.mdx
@@ -93,4 +93,4 @@ In the `createApiGatewayRoute` method callback, there are multiple properties av
 * `onAll` - register a route which will catch all the existing methods
 * `context` - our Webiny internal context with all our applications attached to it
 
-The [`request`](https://www.fastify.io/docs/latest/Reference/Request/) and [`reply`](https://www.fastify.io/docs/latest/Reference/Reply/) objects are original ones from the Fastify, so you can look into their documentation about what they contain and what you can use.
+The [`request`](https://www.fastify.io/docs/latest/Reference/Request/) and [`reply`](https://www.fastify.io/docs/latest/Reference/Reply/) objects are the original ones from the Fastify, so you can look into their documentation about what they contain and what you can use.
