fix: info about graphql lambda

--- a/src/docs/5.31.x/core-development-concepts/extending-and-customizing/add-custom-route-to-existing-lambda.mdx
+++ b/src/docs/5.31.x/core-development-concepts/extending-and-customizing/add-custom-route-to-existing-lambda.mdx
@@ -1,6 +1,6 @@
 ---
-title: Adding Custom Route to Existing Lambda
-description: Learn how to add a custom route to our existing Lambda
+title: Adding Custom Route to Existing Webiny Lambda
+description: Learn how to add a custom route to existing Webiny Lambda
 ---
 
 import { Alert } from "@/components/Alert";
@@ -48,9 +48,9 @@ export default createApiApp({
 
 After these changes, feel free to deploy the api part of your project to test if new route is working. Use your favorite HTTP client to test it out.
 
-## Adding a Route to the GraphQL Handler
+## Adding a Route to the Handler
 
-After you added the route to the `API Gateway`, you can move onto creating a route in our existing GraphQL Lambda handler.
+After you added the route to the `API Gateway`, you can move onto creating a route in our existing handler.
 
 ```typescript apps/api/graphql/src/index.ts
 // add the import somewhere at the top of the file or update the existing import from @webiny/handler-aws
@@ -94,3 +94,10 @@ In the `createApiGatewayRoute` method callback, there are multiple properties av
 * `context` - our Webiny internal context with all our applications attached to it
 
 The [`request`](https://www.fastify.io/docs/latest/Reference/Request/) and [`reply`](https://www.fastify.io/docs/latest/Reference/Reply/) objects are the original ones from the Fastify, so you can look into their documentation about what they contain and what you can use.
+
+
+<Alert type="info" title="Why only the graphql handler example?">
+
+We will eventually remove the headlessCMS Lambda and its handler, so do not add routes there. Everything you might need from the system is available in the GraphQL Lambda handler.
+
+</Alert>
