--- a/src/docs/5.28.x/enterprise/okta-integration.mdx
+++ b/src/docs/5.28.x/enterprise/okta-integration.mdx
@@ -37,9 +37,15 @@ Alternatively, you can create a new `>=5.22.0` project, by running:
 npx create-webiny-project my-project
 ```
 
-<Alert type="info" title="IMPORTANT">
+<Alert type="info" title="MULTI-TENANCY">
 
-If creating a new project, you'll have to first configure multi-tenancy. Follow [this guide](/docs/{version}/enterprise/multi-tenancy), if that's the case.
+  If you need to use multi-tenancy, follow [this guide](/docs/{version}/enterprise/multi-tenancy) before continuing with the Okta setup.
+
+</Alert>
+
+<Alert type="warning" title="IMPORTANT">
+
+  If creating a new project, before following further instructions, make sure you complete the initial setup wizard with Cognito. This is a required step to successfully replace Cognito with Okta.
 
 </Alert>
 
