refactor: advanced filtering

--- a/src/docs/5.34.x/headless-cms/basics/using-graphql-api-advanced-filtering.mdx
+++ b/src/docs/5.34.x/headless-cms/basics/using-graphql-api-advanced-filtering.mdx
@@ -18,12 +18,6 @@ In the 5.34.0 version of Webiny we introduced the `AND` and `OR` conditionals to
 
 Both `AND` and `OR` conditionals are arrays (lists) of the available filters, which depend on the model you are running the query for.
 
-<Alert type="warning">
-
-At the moment, `AND` and `OR` conditionals are working only on the DynamoDB + Elasticsearch systems, as it is quite complex to implement it for the DynamoDB only systems.
-
-</Alert>
-
 ## The `AND` Conditional
 
 The `AND` conditional is the extension of our existing filtering. It works the same as our old GraphQL filtering, with the addition of nested filters.
@@ -432,6 +426,6 @@ This query will produce something like `((author = 1 OR categoryId = 2) AND (tit
 
 <Alert type="info">
 
-While users can nest `AND` and `OR` conditionals indefinitely, they need to be aware that it might result in performance issues.
+While users can nest `AND` and `OR` conditionals indefinitely, they need to be aware that it might result in performance issues, especially in the DynamoDB only systems.
 
 </Alert>
