--- a/src/docs/shared/release-notes/5.34.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.34.0/changelog.mdx
@@ -25,6 +25,12 @@ To make the configuration of the Mailer transports easier, we added the Mailer S
 
 ## Headless CMS
 
+### Advanced (Conditional AND / OR) Filtering ([#2800](https://github.com/webiny/webiny-js/pull/2800)) ([#2916](https://github.com/webiny/webiny-js/pull/2916))
+
+Users can now run the conditional (`AND` and `OR`) filtering in both DynamoDB and DynamoDB + Elasticsearch systems.
+
+To find out more about the advanced filtering, read this [article](/docs/headless-cms/basics/using-graphql-api-advanced-filtering).
+
 ### Nested Object Field Filtering ([#2853](https://github.com/webiny/webiny-js/pull/2853)) ([#2905](https://github.com/webiny/webiny-js/pull/2905))
 
 We added a possibility to filter entries by the values in the nested object field.
